itroduced primereact datatable

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,9 +1,13 @@
 {
+  "author": "Author",
   "books": "Books",
   "error-message": "Sorry, an unexpected error has occurred - please, go back to ",
   "error-title": "Oops",
   "home": "Home",
   "lotr": "Lord of the Rings",
   "movies": "Movies",
-  "quotes": "Quotes"
+  "no-results": "No results...",
+  "quotes": "Quotes",
+  "search": "Search...",
+  "title": "Title"
 }
