added single view of a quote

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -20,6 +20,7 @@
   "movies": "Movies",
   "name": "Name",
   "no-results": "No results...",
+  "quote": "Quote",
   "quotes": "Quotes",
   "race": "Race",
   "realm": "Realm",
